--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cached_network_image: ^3.2.3
   google_fonts: ^3.0.1
   carousel_slider: ^4.2.1
+  get: ^4.6.5
+  persistent_bottom_nav_bar: ^5.0.2
 
 dev_dependencies:
   flutter_test:
